unpackaged/main/default/objects/Exception_Guidlines__c/fields/Underwriting_Hold_Days__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Hold_Days__c</fullName>
    <formula>IF ( ISBLANK( Underwriting_Hold_Start__c)  ||  ISBLANK( Underwriting_Hold_End__c ),0, (5 * ( FLOOR( ( Underwriting_Hold_End__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Underwriting_Hold_End__c - DATE( 1900, 1, 8), 7 ) ) ) - (5 * ( FLOOR( ( Underwriting_Hold_Start__c - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( Underwriting_Hold_Start__c - DATE( 1900, 1, 8), 7 ) ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Underwriting Hold Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>