unpackaged/main/default/objects/Exception_Guidlines__c/fields/Underwriting_Hold_End__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Hold_End__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Underwriting Hold End</label>
    <type>Date</type>
</CustomField>