unpackaged/main/default/objects/Exception_Guidlines__c/fields/Underwriting_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Hold_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Underwriting Hold Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>