unpackaged/main/default/objects/Exception_Guidlines__c/fields/Underwriting_Hold_Start__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Hold_Start__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Underwriting Hold Start</label>
    <type>Date</type>
</CustomField>