unpackaged/main/default/objects/Exception_Guidlines__c/fields/Underwriting_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Start_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Underwriting Start Date</label>
    <type>Date</type>
</CustomField>