unpackaged/main/default/objects/Exception_Guidlines__c/fields/Use_Underwriting_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Use_Underwriting_End_Date__c</fullName>
    <formula>IF(ISBLANK(Underwriting_End_Date__c) , TODAY(), Underwriting_End_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Use Underwriting End Date</label>
    <type>Date</type>
</CustomField>