unpackaged/main/default/objects/Exception_Guidlines__c/fields/Waiver_Period__c.field-meta.xml
<CustomField>
    <fullName>Waiver_Period__c</fullName>
    <label>Waiver Period</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>