unpackaged/main/default/objects/Exception_Guidlines__c/fields/WhyisCustomerMakingRequest__c.field-meta.xml
<CustomField>
    <fullName>WhyisCustomerMakingRequest__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Why is Customer Making Request?</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>