unpackaged/main/default/objects/Exception_Guidlines__c/fields/X10_Change_to_Group_Population__c.field-meta.xml
<CustomField>
    <fullName>X10_Change_to_Group_Population__c</fullName>
    <inlineHelpText>Less than 10 % change to group population.  If &gt; 10% must go to GUR.</inlineHelpText>
    <label>&lt;10% Change to Group Population</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>