unpackaged/main/default/objects/Exception_Guidlines__c/fields/X20_Blue_Collar__c.field-meta.xml
<CustomField>
    <fullName>X20_Blue_Collar__c</fullName>
    <label>&lt;20% Blue Collar</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>