unpackaged/main/default/objects/Exception_Guidlines__c/validationRules/EX005_Adding_SubDiv_Need_With_Employees.validationRule-meta.xml
<ValidationRule>
    <fullName>EX005_Adding_SubDiv_Need_With_Employees</fullName>
    <active>true</active>
    <description>If Adding New Subsidiary or Division the we must know if it is with Employees</description>
    <errorConditionFormula>And( Adding_New_Subsidiary_Or_Division__c,Text( New_Subsidiary_Division_With_Employees__c ) &lt;&gt;    &quot;Yes&quot;,Text(New_Subsidiary_Division_With_Employees__c) &lt;&gt;  &quot;No&quot;)</errorConditionFormula>
    <errorDisplayField>New_Subsidiary_Division_With_Employees__c</errorDisplayField>
    <errorMessage>EX005- If Adding New Sub/div  is checked , then With Employees must be Yes or No</errorMessage>
</ValidationRule>