unpackaged/main/default/objects/Exception_Guidlines__c/validationRules/Only_one_exception_Guidelines.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_one_exception_Guidelines</fullName>
    <active>true</active>
    <description>Case can only have one exception guidelines</description>
    <errorConditionFormula>AND(
 Case__r.Count_of_Exception_Guidelines__c =  1,
ISNEW())</errorConditionFormula>
    <errorMessage>Only one Exception Guidelines per case</errorMessage>
</ValidationRule>