unpackaged/main/default/objects/Exception_Guidlines__c/listViews/Approved_Exceptions.listView-meta.xml
<ListView>
    <fullName>Approved_Exceptions</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Case_Owner__c</columns>
    <columns>Type_of_Request__c</columns>
    <columns>Master_Group__c</columns>
    <columns>Master_Group_Partner__c</columns>
    <columns>Summarize_Decision__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Exception_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved Exceptions</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>