unpackaged/main/default/objects/Exception_Guidlines__c/listViews/OpenUnderwritingException.listView-meta.xml
<ListView>
    <fullName>OpenUnderwritingException</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Case_Owner__c</columns>
    <columns>Type_of_Request__c</columns>
    <columns>Master_Group__c</columns>
    <columns>Master_Group_Partner__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Underwriting_Start_Date__c</columns>
    <columns>Underwriting_Days__c</columns>
    <columns>Underwriting_Hold_Start__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Underwriting_Start_Date__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Underwriting_End_Date__c</field>
        <operation>equals</operation>
    </filters>
    <label>Open Underwriting Exceptions</label>
</ListView>